--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -51,13 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = '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'\n",
-    "PINECONE_API_KEY = 'd3bb7c2c-247a-418e-a91e-3665d3919137'\n",
-    "PINECONE_ENV = 'eu-west-1'"
+    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
+    "PINECONE_API_KEY = os.getenv('PINECONE_API_KEY')"
    ]
   },
   {
