add new API Keys

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import pickle\n",
     "import json\n",
     "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "# - Extraction Libraries\n",
     "from unstructured.partition.pdf import partition_pdf\n",
@@ -51,10 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
+    "load_dotenv()\n",
+    "\n",
     "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
     "PINECONE_API_KEY = os.getenv('PINECONE_API_KEY')"
    ]
